--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -1,22 +1,14 @@
 \section{Projektoverblik}
 \label{sec:projektoverblik}
-%Anders afsnit:
-%Inden rapportens kommende afsnit introdukseres et kort overblik af projektets komponenter og hvordan de kommunikerer med hinanden.\\
-%Som der ses på nedenstående figur \ref{fig:overview_openloop_PTS}, er de forskellige komponenter opdelt i forskellige farver.\\
-%De grønne kasser repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
-%FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. 
-%FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
-
-%Mikkels:
 Som fremgår af projektoplægget skal projektet opdeles som vist på 
 figur \ref{fig:overview_openloop_PTS}. 
 Det ligger altså udenfor dette projekt at bestemme den overordnede opdeling.
 Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{itemize}
 \itemsep1pt
-  \item Regulatorerne skal implementeres på én microprocessor.
-  \item Der skal benyttes SPI kommunikationen imellem microprocessoren og FPGA’en.
-  \item FPGA’en skal styre PWM signalerne til motorerne.
+  \item Regulatorerne skal implementeres på én mikroprocessor.
+  \item Der skal benyttes SPI kommunikationen imellem mikroprocessoren og FPGA’en.
+  \item FPGA’en skal styre PWM-signalerne til motorerne.
   \item FPGA’en skal benyttes til bestemmelse af motorernes position vha. encoderne.
 \end{itemize}
 
@@ -32,4 +24,4 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \end{figure}
 De grønne kasser på figur \ref{fig:overview_openloop_PTS} repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
 FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. 
-FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
+FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoderfeedback til FPGA'en.
