--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,8 +1,8 @@
 \part{Systemidentifikation}
-Denne del gennemgår den teoretiske beskrivelse af systemet
+Denne del gennemgår den teoretiske beskrivelse af systemet.
 Der udvikles en matematisk model af PTS
 og med udgangspunkt i denne designes to regulatorer.
-Desuden drøftes transformationen af kartesiske koordinater til sfæriske koordinater.
+Desuden drøftes transformationen fra kartesiske koordinater til sfæriske koordinater.
 
 \input{./content/PTS}
 \include{./content/kontrollerdesign}
