--- a/Rapport/content/implementering.tex
+++ b/Rapport/content/implementering.tex
@@ -4,7 +4,7 @@ Denne del af rapporten beskriver programmeringsmæssigt design og implementering
 på mikrocontrolleren og FPGA'en.
 Der tages udgangspunkt i kravene til de enkelte dele der er opstillet i projektoplægget samt den foregående analyse af PTS.
 
-Først beskrives designet, valg af skedulering,
+Først beskrives designet, valg af scheduling,
 implementering og test af programmet til mikrocontrolleren.
 Dernæst beskrives implementeringen af de enkelte delelementer på FPGA'en.
 \input{./content/Mikrocontroller}
