--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -29,7 +29,7 @@ Afkoblingen af de to systemer, og opdelingen i hhv. pan og tilt gør, at der kan
 til hvert system, og at der skal findes en overførselsfunktion for hvert system.
 De følgende beregninger tager altså udgangspunkt i det simplificerede afkoblede system.
 Det er dog stadig vigtigt iht. kravspecifikationen at betragte tracking fejlen som en størrelse der samlet
-ikke må overstige 1,02\degree\todo{2,04??}, hvilket gør systemet betragtes stadig som en helhed.
+ikke må overstige 1,02\degree, hvilket gør systemet betragtes stadig som en helhed.
 
 \subsection{DC-Motor}
 To DC-motorer af typen EMG30 \citep{emgmotor}, er forbundet til systemet.
@@ -202,7 +202,7 @@ mens pan blokeres af en stopklods.
 Sammenligningen er nødvendig for at verificere modellen, og for evt. at kunne justere modellen,
 så udgangspunktet for analysen der hører til designet af reguleringssløjferne er så godt som muligt.
 
-Der blev som input givet et rampesignal, der gik fra 0 \% duty cycle til næsten\todo{næsten???} 100 \% duty cycle
+Der blev som input givet et rampesignal, der gik fra 0 \% duty cycle til næsten 100 \% duty cycle
 i løbet af ca. 12 sekunder. Tilt-vinklen blev målt med FPGA'en og sammenlignet med dens teoretiske
 respons for samme input-signal.
 Forsøget blev udført syv gange.
