--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -2,7 +2,7 @@
 \label{sec:problemformulering}
 
 PTS opbygges til tracking og nedskydning af en lerdue i English Skeet (ES). PTS dimensioneres til en konkurrence i ES og er afgrænset til et enkelt tilfælde:
-Afskydning fra ”high house” med PTS placeret på station 4 (B), jf. figur \ref{fig:ES}.
+Afskydning fra ”high house” (D) med PTS placeret på station 4 (B), jf. figur \ref{fig:ES}.
 \begin{figure}[th!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped_axes}
@@ -10,7 +10,7 @@ Afskydning fra ”high house” med PTS placeret på station 4 (B), jf. figur \r
 \label{fig:ES}
 \end{figure}	
 
-Udgangsposition for PTS er at systemet peger mod "high house" (D) hvorfra lerduen afskydes.
+Udgangsposition for PTS er at systemet peger mod D hvorfra lerduen afskydes.
 %GL:
 %Trackingen skal forestille at have til formål at assistere i nedskydningen af lerduen,
 %og man skal således forestille sig et gevær monteret på tilt-rammen:
