--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -283,6 +283,4 @@ undervisningen i reguleringsteknik.
 
 For at integratoren hurtigst muligt kan levere den nødvendige PWM-duty cycle til minimering af fejlsignalet,
 vælges det desuden at implementere et "bias", der tager højde for dødbåndet.
-Enhver PWM-duty cycle til Pan med en størrelse på under 10 \% og til Tilt under 12 \%, og forskellig fra 0, bliver sat til hhv. 10 \% og 12 \%,
-så PTS bevæger sig. For at undgå vedblivende svingninger vælges det desuden at nulstille
-PWM-duty cycles med en størrelse på under 1 \%.\todo[inline,author=Mikael]{Hvorfor 1 \%???}
+Bias er implementeret med en nedre duty cycle grænse på 0.97\% for pan og tilt. Deres respektive øvre grænser er hhv. 11,72\% og 13,18\%. Hvis controlleren returnerer en duty cycle mellem den nedre og øvre grænse, sættes duty cycle til dens øvre grænse. Dette medfører at motoreren kan justere sig ind, selvom fejlen er marginal. Den nedre grænse er bestemt således positionen er indenfor ét encoder tick.
