Figur 2.a nu med rød.

--- a/Rapport/graphics/high_house_2D_parabola.tex
+++ b/Rapport/graphics/high_house_2D_parabola.tex
@@ -9,5 +9,5 @@
     xmin=0,
     xmax=55] % Maks værdi
     
-\addplot[domain=0:53,blue]{-0.00421*x^2 + 0.1602 * x + 3.05};  % {funktionen indsættes i tuborg og t = domain}
+\addplot[domain=0:53,red]{-0.00421*x^2 + 0.1602 * x + 3.05};  % {funktionen indsættes i tuborg og t = domain}
 \end{axis}
