--- a/Rapport/graphics/FPGA_blok.tex
+++ b/Rapport/graphics/FPGA_blok.tex
@@ -1,12 +1,12 @@
 \node[task_title](display) [] {Display};
 \node[task_description](Display_Debug) [right of= display] {Display};
 \node[task_description](Clock_scaler) [right of= Display_Debug] {Clock scaler};
-\node[task_description](Tic_counter) [yshift=2.5cm,below of= Display_Debug] {Tic counter};
+\node[task_description](Tic_counter) [yshift=2.5cm,below of= Display_Debug] {Tick counter};
 \node[task_title](encoder1) [yshift=0.5cm, left of= Tic_counter] {Encoder1};
 \node[task_title](encoder2) [yshift=-0.5cm, left of= Tic_counter] {Encoder2};
 
 %Mikkel
-\node[task_description](Tic_reset)[yshift=2.5cm,,below of= Tic_counter] {Tic reset};
+\node[task_description](Tic_reset)[yshift=2.5cm,,below of= Tic_counter] {Tick reset};
 \node[task_title](Hall_sensor) [left of= Tic_reset] {Hall sensor};
 \path[->] (Hall_sensor) edge[bend left=0] (Tic_reset);
 \path[<->] (Tic_reset) edge[bend left=0] (Tic_counter);
