--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -40,7 +40,7 @@
 \include{./content/systemidentification}
 \include{./content/implementering}
 \include{./content/regulering}
-\include{./content/test}
+%\include{./content/test}
 \include{./content/evaluering}
 %%%%%%%%%%%% Litteratur %%%%%%%%%%%%
 \bibliography{litteraturliste}
