--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,3 +1,4 @@
-\part{Justering af regulator}
-I denne del optimeringes koefficienterne i reguleringssløjferne for PTS.
+\part{Regulator justering og PTS verifikation}
+I denne del optimeringes controller koefficienterne i reguleringssløjferne for PTS. Herefter vurderes PTS's performance i forhold til fastsatte krav.
 \input{./content/PID_optimering}
+%\include{./content/PTS_verifikation}
