--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -27,4 +27,4 @@ repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
 FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. 
 FPGA'en og mikrocontrolleren kommunikerer sammen vha. SPI.
 FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for
-pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
+pan og H-broen og motor for tilt. DC-motorene sender deres encoder feedback til FPGA'en.
