--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,3 +1,3 @@
 \part{Justering af regulator}
-I denne del optimeringes koefficienterne i reguleringssløjferne for PTS.
+I denne del optimeres koefficienterne i reguleringssløjferne for PTS.
 \input{./content/PID_optimering}
