--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -42,7 +42,7 @@ Pos\left( t \right) =
 \end{equation}
 %En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
 
-Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}.
+Lerduens flugt er illustreret på figur \ref{fig:para_total}.
 Punktet D er "high house".
 Punktet SB og punktet G er hhv. 40,3 [m] og 52 [m] fra "high house". \\
 \begin{figure}[h!]
@@ -58,8 +58,9 @@ Punktet SB og punktet G er hhv. 40,3 [m] og 52 [m] fra "high house". \\
 	\end{tikzpicture}
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
+\label{fig:para_total}
 \end{figure}
-\todo[inline,author=Anders]{Vi bruger ikke figur \ref{fig:HH2D_para}}
+
 Tilt-rammen kan bevæge sig frit,
 men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
