--- a/Rapport/graphics/high_house_2D_parabola.tex
+++ b/Rapport/graphics/high_house_2D_parabola.tex
@@ -1,6 +1,6 @@
 \begin{axis}[ 
-    xlabel=$Afstand \text{[m]}$,
-    ylabel=$Højde \text{[m]}$,
+    xlabel=$\text{Afstand [m] - XY}$,
+    ylabel=$\text{Højde [m] - Z}$,
     grid=major,
     ytick={0,1,...,5}, % Grid intervallet
     xtick={0,5,...,55}, % Grid intervallet
