--- a/Rapport/content/implementering.tex
+++ b/Rapport/content/implementering.tex
@@ -1,6 +1,6 @@
 \part{Implementering}
 %Michael forsøger sig lige med en lille intro. 
-Denne del af rapporten beskriver programmeringsmæssigt design og implementering af programmerne
+Denne del af rapporten beskriver softwaredesign og implementering af programmerne
 på mikrocontrolleren og FPGA'en.
 Der tages udgangspunkt i kravene til de enkelte dele der er opstillet i projektoplægget samt den foregående analyse af PTS.
 
