Jeg vil gerne have hjælp til at skrive det her.

--- a/Rapport/content/diskussion.tex
+++ b/Rapport/content/diskussion.tex
@@ -1,4 +1,21 @@
 \section{Diskussion}
 \label{sec:diskussion}
 
-\todo[inline,author=ALLE]{Mangler at blive skrevet}
+Den matematisk model for PTS blev verificeret vha. en openloop test, figur \ref{fig:openloopV1}. Der blev valgt at tilføje dødbånd for hhv. pan og tilt. Under finjusteringen af controllerkoefficienterne for hhv. pan og tilt blev dødbåndet justeret endnu mere ind. 
+
+Koordinattransformationen 
+
+
+Digkretisering af systemet
+
+
+
+mikrocontroller.. real tid 
+FPGA
+SPI
+
+
+
+
+Regulator og PTS verifikation
+- hvorfor PID PI eller P
