--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -177,7 +177,7 @@ I kodeudsnittet \ref{ctrl_task} ses task'en som den bliver kørt hvis den er i t
 Brugerinterfacet gør det overskueligt at styre og skifte mellem de forskellige tilstande som systemet kan køres i.
 Der er lavet funktioner som bruges til test af specifikke funktioner (fx at sætte en bestemt PWM duty cycle)
 og funktioner som starter en større test (fx tracking af lerdueparablen).
-Formålet er at gøre det simpelt for gruppen at udvikle regulatoren -
+Formålet er at simplificere arbjedet med udviklingen og justeringen af regulatoren -
 det er altså ikke tænkt til en kunde som ikke ved noget om systemet.
 De primære funktioner er at sætte en position eller starte tracking af lerduen.
 Hvis det indtastede ikke bliver genkendt bliver en liste over gyldige funktioner udskrevet.
