--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -104,6 +104,7 @@ FPGA'ens positionsencoders læser motorakslens rotation inden reduktionsgearinge
 Da encoderopløsningen er 360 ticks pr. rotation \citep{emgmotor},
 vil gearingen i forholdet 1:3 gøre, at kvantiseringsintervallet af output-rotationen til rammerne,
 er \(\frac{1}{1080}\).
+Når der refereres til ticks, kan der altså konverteres til grader i det \(3 ticks = 1 \degree\).
 
 På FPGA'en genereres to PWM-signaler til den dobbelte H-bro ud fra to
 duty cycles som mikrocontrolleren leverer.
