--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -336,7 +336,7 @@ Altså overholder implementeringen kravet på afvikling indenfor 83,3 [\micro s]
 Samme fremgangsmåde blev brugt til at undersøge timingen for Control-task'en,
 som indeholder reguleringssløjferne. Oscilloskopet blev indstillet til \(500.000\) Samples/s.
 Kravet til afviklingen var: Reguleringsløjferne kører med 600 [Hz], samt at task'en afvikles inden næste periode. 
-Dvs. en maks afviklingstid på \(\frac{1}{600\) [s], da kravet på 600 [Hz] ellers ikke kunne opfyldes. 
+Dvs. en maks afviklingstid på \(\frac{1}{600}\) [s], da kravet på 600 [Hz] ellers ikke kunne opfyldes. 
 Intervallet mellem hver afvikling af task'en blev målt for 60 afviklinger,
 og resultaterne er vist i tabel \ref{tb:ctrltasktimingtest}.
 \begin{table}[h!]
@@ -369,12 +369,10 @@ Koordinat transformation: & 228 [\micro s] & 202 [\micro s] & 206 [\micro s] & 2
 \hline 
 PID kontroller: & 40 [\micro s] & 30 [\micro s] & 32 [\micro s] & 34 [\micro s]\\
 \end{tabu} 
-\caption{Afviklingstiden for Ctrl task, Koordinattransformation og PID kontrolleren. 
+\caption{Afviklingstiden for Control task, Koordinattransformation og PID-regulatoren.\\
 Måleusikkerheden er $\pm$ 4 [\micro s].}
 \label{tb:ctrl task runtime test}
 \end{table}
-
-%\todo[inline, author=Michael]{Jeg har en usikkerhed på $\pm$ 4 [\micro s] på tabellen ovenover, men ved ikke hvor den skal skrives? }
 
 På trods af at afviklingstiden varierer, afvikles tasken før sin deadline - med en margin på min. 1,298 [ms] til næste task. 
 \todo[inline,author=Nikolaj, color=green]{Skal man ikke tænke mindste målte interval - måleusikkerheden - længste afviklingstid?}
